testing the api and adding button listener

--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
                     <div class="form-group"> 
                         <input type="text" class="form-control" id="city" name="city">
                     </div> 
-                    <button type="submit" class="btn btn-outline-primary btn-block">Search</button>       
+                    <button type="button" class="btn btn-outline-primary btn-block" id="searchButton">Search</button>       
                 </form>
             </div>
             <br>
             <div>
                 <div>
                     <form> 
-                        <button type="submit" class="btn btn-outline-secondary btn-block">Atlanta</button>
-                        <button type="submit" class="btn btn-outline-secondary btn-block">Denver</button>
-                        <button type="submit" class="btn btn-outline-secondary btn-block">Seatle</button>
+                        <button type="button" class="btn btn-outline-secondary btn-block">Atlanta</button>
+                        <button type="button" class="btn btn-outline-secondary btn-block">Denver</button>
+                        <button type="button" class="btn btn-outline-secondary btn-block">Seatle</button>
                     </form>
                 </div>
             </div>
@@ -90,5 +90,6 @@
         </div>
     </div>
 
+    <script src="./assets/script.js"></script>
 </body>
 </html>
