--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Weather Dashboard</title> 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/style.css">
 </head>
 <body>
     <header>
@@ -22,12 +24,15 @@
             <h3>Search for a City:</h3>
             
             <div> 
-                <form>
+                <form class="inputArea">
                     <div class="form-group"> 
                         <input type="text" class="form-control" id="city" name="city">
                     </div> 
                     <button type="button" class="btn btn-outline-primary btn-block" id="searchButton">Search</button>       
                 </form>
+            </div>
+            <div>
+                <p class = "text-center" id="cityNotFoundMessage">¡City not found! Please try again</p>
             </div>
             <br>
             <div>
