deleted of lines commented

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
                 <div>
                     <h3>Serch history</h3>
                     <form id="buttonsofSearchedCities"> 
-                        <!-- <button type="button" class="btn btn-outline-secondary btn-block">Atlanta</button>
-                        <button type="button" class="btn btn-outline-secondary btn-block">Denver</button>
-                        <button type="button" class="btn btn-outline-secondary btn-block">Seatle</button> -->
+                        <!-- A form for the history or cities searched -->
                     </form>
                 </div>
             </div>
